src/np222kk/dv507/a2/test/cases/negative/test_methodarray_03.ofp
void main() {

    char c = method()[0];
}

char method() {
    return 'c';
}